# m2_hw2

./: Dockerfile  README.md  classes.html  dedalus_project-1.2.5-py3-none-any.whl  packages.html  setup.py
dedalus/: README.md  pyproject.toml
dedalus/dedalus/: bot.py  factorize.py  output.py  sort.py
dedalus_project/: bot.py
