[tool.poetry]
name = "dedalus"
version = "1.3.0"
description = "Dedalus personal assistant that works with contacts and notes"
authors = ["Pelmenoff <Titanfall@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
phonenumbers = "^8.12.32"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
